# elfragmentador-data

./: .gitignore  GET_DATA.bash  README.md  RUN.bash  RUN_EVAL.bash  RUN_EVAL_LOCAL.bash  RUN_LOCAL.bash  cluster.json  env.yml  eval_peptidome_sample_info.tsv  fasta_preparations.smk  foo.py  irt_operations.smk  mokapot_operations.smk  mokapot_utils.py  msconvert.bash  pyproject.toml  raw_file_operations.smk  readMZML.py  sample_info.tsv  search_operations.smk  small_sample_info.tsv  spec_metadata.py  spectrast_operations.smk  train_data_operations.smk  workflow.smk  workflow_002.smk
comet_params/: comet.params.high_high  comet.params.proalanase.high_high  comet_phospho.params.high_high
fasta/: RT_QC.fasta  TUM_isoform.fasta  TUM_missing_first.fasta  TUM_proteo_TMT.fasta  TUM_second_addon.fasta  crap.fasta  irtfusion.fasta  missing_gene_set_complete.fasta  proteometools_ptm_batch.fasta  proteotypic_set_complete.fasta  split_fasta.bash  srmatlas_set_complete.fasta
fasta/proteometools/: Packet_PTM_Trainingskit_Kmod.fasta  Packet_PTM_Trainingskit_Pmod.fasta  Packet_PTM_Trainingskit_Rmod.fasta  Packet_PTM_Trainingskit_Ymod.fasta  Packet_TUM_first_pool_1.fasta  Packet_TUM_first_pool_10.fasta  Packet_TUM_first_pool_100.fasta  (+584 more)
scripts/: consolidate_parquet_tables.py  plot_top_n.py
snakemodules/: bibliospec_operations.smk  elfragmentador_operations.smk  env_setup.py  env_setup.smk  fasta_preparations.smk  irt_operations.smk  mokapot_helpers.py  mokapot_operations.smk  ptm_operations.smk  raw_file_operations.smk  search_operations.smk  spectrast_operations.smk  train_data_operations.smk
target_files/: HLA_groups.tsv  TMT_mod_files.tsv  eval_peptidome_sample_info.tsv  proteometools_ptm.tsv  sample_info.tsv  train_all.tsv
templates/: plot_error_rates.Rmd  plot_error_rates_top1.Rmd  plot_roc_curves.Rmd  plot_spectrum_comp_ef.Rmd
test_target_files/: small_proteometools_ptm.tsv
(+422 files in other folders)
