[tool.poetry]
name = "elfragmentador-data"
version = "0.1.0"
description = ""
authors = ["Jspaezp <jspaezp@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8.6,<3.10"
snakemake = "^6.1.0"
pandas = "^1.2.3"
llvmlite = "^0.36.0"
mokapot = "^0.7.1"
pyteomics = "^4.4.2"
matplotlib = "^3.4.1"
lxml = "^4.6.3"
ipykernel = "^6.2.0"
elfragmentador = "^0.50.6"
tqdm = "^4.62.3"
poetry = "^1.1.11"

[tool.poetry.dev-dependencies]
snakefmt = "^0.4.2"
pyarrow = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
