[tool.poetry]
name = "elfragmentador-data"
version = "0.1.0"
description = ""
authors = ["Jspaezp <jspaezp@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
snakemake = "^6.1.0"
tabulate = "<0.9.0"
pandas = "^1.2.3"
pyteomics = "^4.4.2"
matplotlib = "^3.4.1"
lxml = "^4.6.3"
ipykernel = "^6.2.0"
tqdm = "^4.62.3"
poetry = "^1.1.11"
loguru = "^0.6.0"
fastparquet = "^0.8.3"
pyarrow = "^10.0.0"
ms2ml = "^0.0.17"
mokapot = "^0.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
