[tool.poetry]
name = "elfragmentador-data"
version = "0.2.0"
description = ""
authors = ["Jspaezp <jspaezp@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
snakemake = "^6.1.0"
tabulate = "<0.9.0"
pandas = "^1.2.3"
pyteomics = "^4.4.2"
matplotlib = "^3.4.1"
lxml = "^4.6.3"
ipykernel = "^6.2.0"
tqdm = "^4.62.3"
loguru = "^0.6.0"
fastparquet = "^0.8.3"
pyarrow = "^10.0.0"
ms2ml = "^0.0.21"
mokapot = "^0.8.3"
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
snakefmt = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
